...
    <string name="description_intro" ditto_api_id="description_intro">Inserisci i dettagli del pagamento e permetti ai tuoi clienti di utilizzare un bonus ID Pay.</string>
    <string name="cta_intro" ditto_api_id="cta_intro">Accetta bonus ID Pay</string>
    <string name="title_exitAppDialog" ditto_api_id="title_exitAppDialog">Confermi di voler uscire dall’app idpay?</string>
    <string name="cta_exitApp" ditto_api_id="cta_exitApp">Esci dall’app</string>
    <string name="cta_close" ditto_api_id="cta_close">Chiudi</string>
    <string name="cta_cancel" ditto_api_id="cta_cancel">Annulla</string>
    <string name="label_username" ditto_api_id="label_username">Nome utente</string>
    <string name="label_password" ditto_api_id="label_password">Password</string>
    <string name="title_loginTestEnv" ditto_api_id="title_loginTestEnv">Ambiente di test</string>
    <string name="cta_login" ditto_api_id="cta_login">Accedi</string>
    <string name="feedback_loginFailed" ditto_api_id="feedback_loginFailed">Accesso non riuscito. Hai inserito il nome utente e la password corretti\?</string>
    <string name="cta_menu_paymentHistory" ditto_api_id="cta_menu_paymentHistory">Storico operazioni</string>
    <string name="cta_menu_support" ditto_api_id="cta_menu_support">Assistenza</string>
    <string name="choose_initiative">Scegli l’iniziativa</string>
...
