...
                        android:text="@string/label_transactionTime"
                        android:textAllCaps="true"
                        android:textColor="@color/blue_grey_medium"
                        android:textSize="@dimen/caption" />

                    <TextView
                        android:id="@+id/timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titillium_web_bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/body"
                        tools:text="15 mar 2023, 16:44" />
...
        android:layout_height="wrap_content"
        android:background="@drawable/white_top_corners_16_dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent">

        <it.pagopa.swc_smartpos.ui_kit.buttons.CustomLoadingButton
            android:id="@+id/btn_ricevuta"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/divider_padding"
            app:text="Emetti ricevuta" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
