...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/icon_header_dimension"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_horizontal"
        android:paddingEnd="1dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
...
