...
                android:fontFamily="@font/readex_pro"
                android:text="@string/paragraph_paymentHistory"
                android:textColor="@color/black"
                android:textSize="@dimen/h6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rw_storico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_storico" />
        </androidx.appcompat.widget.LinearLayoutCompat>
...
